--- a/estilos/style-contact-us.css
+++ b/estilos/style-contact-us.css
@@ -6,13 +6,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-html, body {
-    width: 100vw;
-    height: 100vh;  
-}
+
 
 main{
-    width: 100vw;
+    height: 100%;
 }
 
 
@@ -118,11 +115,12 @@ main > .infos > img {
 main > img {
     width: 40%;
     height: 60%;
+    margin-top: 50px;
 }
 
 
 footer {
-    width: 100vw;
+    width: 100%;
     background-color: #f5b42c;
     display: flex;
     justify-content: space-between;
