--- a/estilos/style-index.css
+++ b/estilos/style-index.css
@@ -6,13 +6,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-html, body {
-    width: 100vw;
-    height: 100vh;  
-}
 
-main{
-    width: 98%;
+
+main {
+    height: 100%;
 }
 
 
@@ -140,7 +137,7 @@ main > section.final-content1 > ul > li > a {
 }
 
 main > section.lojinha-page {
-    width: 100vw;
+    width: 100%;
     height: 280px;
     background-color: #FFCB04;
     display: flex;
@@ -173,7 +170,7 @@ main > section.lojinha-page > a {
 }
 
 footer {
-    width: 100vw;
+    width: 100%;
     background-color: black;
     display: flex;
     justify-content: space-between;
