--- a/estilos/style-index.css
+++ b/estilos/style-index.css
@@ -41,6 +41,7 @@ menu {
 .topnav-menu li > a {
     text-decoration: none;
     color: black;
+    padding-right: 30px;
 }
 
 .topnav-menu li > a:hover {
